# PatchCore_Pytorch

./: .gitignore
01_gen_test_model/: 01_model_gen_trace.py
02_c++_inference/: 01_test_libtorch.cpp  02_pred_dumei_model.cpp  CMakeLists.txt
03_patchcore_model_train/: 01_train.py  02_load_trace_model.py  train.py
03_patchcore_model_train/anomalib/data/: mvtec.py
03_patchcore_model_train/anomalib/post_processing/normalization/: min_max.py
03_patchcore_model_train/anomalib/pre_processing/: pre_process.py
03_patchcore_model_train/anomalib/utils/callbacks/: visualizer_callback.py
